# PDF-Doc-Processor

./: .env.example  .gitignore  Cargo.toml  PDF_NUMBER_EXTRACTOR.md  README.md  REMOVE_SCANNER_GUIDE.md  config.toml  package-lock.json  package.json  run.sh
src/: config.rs  error.rs  extract-number.ts  main.rs  ocr.rs  processor.rs  splitter.rs  utils.rs  watcher.rs
